[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/XP/Menu/Level.svg" type="Texture" id=1]
[ext_resource path="res://UI/XP/Menu/Upgrade.svg" type="Texture" id=2]
[ext_resource path="res://UI/XP/Menu/AbilityBox/AbilityBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/XP/Menu/Icon/STR.svg" type="Texture" id=4]
[ext_resource path="res://UI/XP/Menu/Menu.gd" type="Script" id=5]
[ext_resource path="res://UI/XP/Menu/Menu.svg" type="Texture" id=6]
[ext_resource path="res://UI/XP/Menu/Icon/INT.svg" type="Texture" id=7]
[ext_resource path="res://UI/XP/Menu/Icon/AGI.svg" type="Texture" id=8]
[ext_resource path="res://UI/XP/Menu/Icon/VIT.svg" type="Texture" id=9]
[ext_resource path="res://UI/XP/Menu/Icon/CON.svg" type="Texture" id=10]
[ext_resource path="res://UI/XP/Menu/Icon/DEX.svg" type="Texture" id=11]

[node name="Menu" type="TextureRect"]
self_modulate = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Level" type="Control" parent="."]
margin_left = 8.0
margin_top = 5.0

[node name="Icon" type="TextureRect" parent="Level"]
self_modulate = Color( 0.552941, 0.552941, 1, 1 )
texture = ExtResource( 1 )

[node name="Value" type="Label" parent="Level"]
margin_left = 26.0
margin_top = 5.0
margin_right = 98.0
margin_bottom = 19.0
rect_scale = Vector2( 1.2, 1.2 )
text = "0"

[node name="Upgrade" type="Control" parent="."]
margin_left = 8.0
margin_top = 36.0

[node name="Icon" type="TextureRect" parent="Upgrade"]
self_modulate = Color( 0.862745, 1, 0.521569, 1 )
texture = ExtResource( 2 )

[node name="Value" type="Label" parent="Upgrade"]
margin_left = 26.0
margin_top = 5.0
rect_scale = Vector2( 1.2, 1.2 )
text = "0"

[node name="STR" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 70.0
Icon = ExtResource( 4 )
Col = Color( 1, 0.0392157, 0.0392157, 1 )
Upgradeable = false

[node name="INT" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 110.0
Icon = ExtResource( 7 )
Col = Color( 0.784314, 0, 1, 1 )
Upgradeable = false

[node name="DEX" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 150.0
Icon = ExtResource( 11 )
Col = Color( 1, 0.501961, 0.270588, 1 )
Upgradeable = false

[node name="AGI" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 190.0
Icon = ExtResource( 8 )
Col = Color( 0, 0.784314, 1, 1 )
Upgradeable = false

[node name="VIT" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 230.0
Icon = ExtResource( 9 )
Col = Color( 0.0390625, 1, 0.0390625, 1 )
Upgradeable = false

[node name="CON" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 270.0
Icon = ExtResource( 10 )
Col = Color( 1, 1, 0, 1 )
Upgradeable = false

[connection signal="OnUp" from="STR" to="." method="_on_STR_OnUp"]
[connection signal="OnUp" from="INT" to="." method="_on_INT_OnUp"]
[connection signal="OnUp" from="DEX" to="." method="_on_DEX_OnUp"]
[connection signal="OnUp" from="AGI" to="." method="_on_AGI_OnUp"]
[connection signal="OnUp" from="VIT" to="." method="_on_VIT_OnUp"]
[connection signal="OnUp" from="CON" to="." method="_on_CON_OnUp"]
